--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <div id="root" class="d-flex flex-column min-vh-100"></div>
+  <div id="modal"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
